# submission-validator

./: .gitignore  CHECKS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
src/submission_validator/: cli.py  constants.py  logging_config.py  overview.py  pdb.py  result.py  validator.py
src/submission_validator/checks/: __init__.py  format.py  residues.py  structure.py
src/submission_validator/fixes/: tidy.py
tests/: conftest.py  test_format.py  test_residues.py  test_structure.py  test_validator.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: build-wheel.js
web/src/: App.tsx
web/src/components/: FileUpload.tsx  LoadingSpinner.tsx  Navbar.tsx  ValidationResults.tsx
web/src/hooks/: usePyodide.ts
