[project]
name = "submission-validator"
version = "0.1.0"
description = "Validate CAPRI submissions"
authors = [{ name = "placeholder", email = "email@email.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["pdb-tools>=2.5.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
submission-validator = "submission_validator.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
