[project]
name = "submission-validator"
version = "0.1.0"
description = "Validate CAPRI submissions"
authors = [{ name = "placeholder", email = "email@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pdb-tools>=2.5.0"]

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff", "black", "isort", "mypy"]

[project.scripts]
submission-validator = "submission_validator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = "pdbtools.*"
ignore_missing_imports = true
